--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "firebase": "^12.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.2",
+    "react-star-rating-input": "^8.0.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
