--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-helmet-async": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.2",
+    "react-simple-captcha": "^9.3.1",
     "react-star-rating-input": "^8.0.1",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
