--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^4.0.2",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
     "firebase": "^12.2.1",
